--- a/Application/kz-desktop/src/view/student/view-class-schedule.html
+++ b/Application/kz-desktop/src/view/student/view-class-schedule.html
@@ -33,8 +33,9 @@
             </div>
         </nav>
     </header>
-    <div style="margin-top: 75px;">
-        <h2> <strong class="d-flex justify-content-center" >View Class Schedule</strong> </h2>
+    <div >
+
+        <h2> <strong class="d-flex justify-content-center" style="margin-top: 75px;" >View Class Schedule</strong> </h2>
         <table class="table table-hover">
           <thead>
             <tr>
