--- a/Application/kz-desktop/src/view/student/view-class-schedule.html
+++ b/Application/kz-desktop/src/view/student/view-class-schedule.html
@@ -18,7 +18,9 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./view-class.html">View Class</a>
-                        <a class="nav-link" href="./view-class-schedule.html">View Class Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./view-class-schedule.html">View Class Schedule</a>
                     </li>
                 </ul>
                 <ul style="list-style: none">
