--- a/Application/kz-desktop/src/view/administrative-department/admin-home.html
+++ b/Application/kz-desktop/src/view/administrative-department/admin-home.html
@@ -17,14 +17,14 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./allocate-class.html">Allocate Class</a>
+                        <a class="nav-link" href="./admin-home.html">Home</a>
                     </li>
                 </ul>
                 <ul style="list-style: none">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="menu" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrative Department</a>
+                        <a class="nav-link dropdown-toggle" id="currUser" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrative Department</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="">Log Out</a>
+                            <a class="dropdown-item" href="../login-page.html">Log Out</a>
                         </div>
                     </li>
                 </ul>
@@ -32,23 +32,74 @@
             </div>
         </nav>
     </header>
-    <form action="{{ url('user/register') }}" style="margin: 50px 100px" method="POST" enctype="multipart/form-data">
-        <div class="form-group">
-            <h2> <strong class="d-flex justify-content-center" >Allocate Class</strong> </h2>
-            <label class="form-label mt-4" >Lecturer ID</label>
-            <div class="form-floating mb-3">
-                <input type="email" class="form-control" name="text" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">LecturerID</label>
-            </div>
-            <label class="form-label mt-4" >Password</label>
-                <div class="form-floating">
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
-                </div>
-            </div>
-            <input style="margin: 25px 0" type="submit" class="btn btn-primary" value="Login">
-        </div>
-    </form>
+    <div style="margin-top: 75px;">
+        <h2> <strong class="d-flex justify-content-center" >Home</strong> </h2>
+        <button class="btn my-2 my-sm-0 btn-outline-dark" type="submit" id="create-btn">Create Class</button>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Class Code</th>
+              <th scope="col">Course Name</th>
+            </tr>
+          </thead>
+          <tbody id="classes">
+            <template id="class-template">
+                <tr>
+                    <td scope="col" id="class-code">class code</td>
+                    <td scope="col" id="course-name">course name</td>
+                    <td scope="col" ><button class="btn my-2 my-sm-0 btn-outline-dark" type="submit" id="allocate-btn">Allocate Class</button></td>
+                </tr>
+            </template>
+          </tbody>
+        </table>
+      
+      </div>
   </body>
+  <script type="module">
+    import { Firestore, collection, getDocs, getDoc, doc, getFirestore, query, where } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
+    import { firebaseApp } from '../../firebase.js'
+
+    const db = getFirestore(firebaseApp)
+
+    window.onload = async () => {
+        const q = query(collection(db, "classes"));
+        const querySnapshot = await getDocs(q);
+        querySnapshot.forEach((query) => {
+            // doc.data() is never undefined for query doc snapshots
+            const { CourseID } = query.data()
+            
+            async function test(){
+                const docCourse = await getDoc(doc(db, "courses", CourseID));
+    
+                const { CourseName } = docCourse.data()
+                console.log(docCourse.data())
+    
+                let body = document.querySelector('#classes')
+                let template = document.querySelector('#class-template')
+                const clone = template.content.cloneNode(true)
+                const course_name = clone.querySelector('#course-name')
+                const class_code = clone.querySelector('#class-code')
+    
+                class_code.textContent = query.id
+                course_name.textContent = CourseName
+    
+                clone.querySelector('#allocate-btn').addEventListener('click', () => {
+                    sessionStorage.setItem("currClassID", query.id);
+                    window.location.assign('./allocate-class.html')
+                });
+    
+                
+                body.appendChild(clone)
+                
+            }
+            test().catch((e)=>{
+                    console.log(e.message)
+                });
+            });
+        }
+        document.getElementById('create-btn').addEventListener('click', () => {
+            window.location.assign('./create-class.html')
+        });
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
