--- a/Application/kz-desktop/src/view/lecturer/view-co.html
+++ b/Application/kz-desktop/src/view/lecturer/view-co.html
@@ -47,9 +47,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="./create-individual-assignment.html">Individual Assignment</a>
-            <a class="dropdown-item" href="./create-group-assignment.html">Group Assignment</a>
+            <a class="dropdown-item" href="./view-assignment.html">Assignment</a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="./create-assignment.html">Create Assignment</a>
             <a class="dropdown-item" href="./create-group.html">Create Group</a>
           </div>
         </li>
