--- a/Application/kz-desktop/src/view/lecturer/view-forum.html
+++ b/Application/kz-desktop/src/view/lecturer/view-forum.html
@@ -57,9 +57,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="./create-individual-assignment.html">Individual Assignment</a>
-            <a class="dropdown-item" href="./create-group-assignment.html">Group Assignment</a>
+            <a class="dropdown-item" href="./view-assignment.html">Assignment</a>
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="./create-assignment.html">Create Assignment</a>
             <a class="dropdown-item" href="./create-group.html">Create Group</a>
           </div>
         </li>
@@ -94,7 +94,8 @@
     var ClassID = sessionStorage.getItem('currClassID');
 
     window.onload = async () => {
-        const querySnapshot = await getDocs(collection(db, "forum"), where("ClassID", "==", ClassID));
+      const q = query(collection(db, "forum"), where("ClassID", "==", ClassID));
+      const querySnapshot = await getDocs(q);
         querySnapshot.forEach((query) => {
             const { Title, UserID } = query.data()
 
