--- a/Application/kz-desktop/src/view/student/forum-detail.html
+++ b/Application/kz-desktop/src/view/student/forum-detail.html
@@ -13,27 +13,19 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+  
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <li class="nav-item">
-                            <a class="nav-link" href="./view-teaching-schedule.html">View Teaching Schedule</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="./create-group-assignment.html">Create Group Assignment</a>
-                              <a class="dropdown-item" href="./create-individual-assignment.html">Create Individual Assignment</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="./create-group.html">Create Group</a>
-                            </div>
-                          </li>
+                        <a class="nav-link" href="./view-class.html">View Class</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./view-class-schedule.html">View Class Schedule</a>
+                      </li>
                 </ul>
                 <ul style="list-style: none">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="menu" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Lecturer</a>
+                        <a class="nav-link dropdown-toggle" id="currUser" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Student</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="../login-page.html">Log Out</a>
                         </div>
@@ -43,26 +35,20 @@
             </div>
         </nav>
     </header>
-
-    <ul class="nav nav-tabs" style="margin-top: 50px;">
+  
+      <ul class="nav nav-tabs" style="margin-top: 50px;">
         <li class="nav-item">
-          <a class="nav-link" href="./view-co.html">Course Outline</a>
+          <a class="nav-link" href="./view-lecturer-students.html">Course Syllabus</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" href="./view-forum.html">Forum</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./view-student.html">Student</a>
+            <a class="nav-link" href="./view-lecturer-students.html">Lecturer & Students</a>
           </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Assignment</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="./view-assignment.html">Assignment</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="./create-assignment.html">Create Assignment</a>
-            <a class="dropdown-item" href="./create-group.html">Create Group</a>
-          </div>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./view-assignment.html">Assignment</a>
+          </li>
       </ul>
       <div id="myTabContent" class="tab-content">
         <div id="header-forum" style="justify-content: center; margin: 50px 100px;">
@@ -89,6 +75,7 @@
                 <tr>
                     <td scope="col" id="user">class code</td>
                     <td scope="col" id="comment">course name</td>
+                    <td scope="col" id="btn-delete"><button type="button" class="btn-close" data-bs-dismiss="alert"></button></td>
                 </tr>
             </template>
             </tbody>
@@ -104,15 +91,14 @@
     </div>
   </body>
   <script type="module">
-    import { addDoc, Firestore, collection, getDocs, getDoc, doc, getFirestore, query, where } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
+    import { addDoc, Firestore, collection, getDocs, getDoc, doc, getFirestore, query, where, deleteDoc } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js'
     import { firebaseApp } from '../../firebase.js'
 
     const db = getFirestore(firebaseApp)
     var ForumID = sessionStorage.getItem('currForum');
 
     window.onload = async () => {
-        const q = query(collection(db, "forumDetail"), where("ForumID", "==", ForumID));
-        const querySnapshot = await getDocs(q);
+        const docClass = await getDoc(doc(db, "forum", ForumID));
         const { Title, UserID, Comment } = docClass.data()
 
         let bodyForum = document.querySelector('#header-forum')
@@ -128,7 +114,8 @@
         
         bodyForum.appendChild(cloneForum)
 
-        const querySnapshot = await getDocs(collection(db, "forumDetail"), where("ForumID", "==", ForumID));
+        const q = query(collection(db, "forumDetail"), where("ForumID", "==", ForumID));
+        const querySnapshot = await getDocs(q);
         querySnapshot.forEach((query) => {
             const { Comment, UserID } = query.data()
 
@@ -141,19 +128,45 @@
             user.textContent = UserID
             comment.textContent = Comment
 
+            clone.querySelector('#btn-delete').addEventListener('click', async () => {
+                const docForum = await getDoc(doc(db, "forumDetail", query.id));
+                const { UserID } = docForum.data()
+
+                if(UserID == sessionStorage.getItem('currStudent')){
+                    await deleteDoc(doc(db, "forumDetail", query.id));
+                    window.location.reload()
+                }else{
+                    alert('Cannot delete')
+                }
+            });
+
             body.appendChild(clone)
         });
         
     }
 
     document.querySelector('#button-addon2').addEventListener('click', async() => {        
-        var userID =  sessionStorage.getItem('currLecturer');
-
-        const docRef = await addDoc(collection(db, "forumDetail"), {
-            ForumID: ForumID,
-            Comment: document.getElementById('comment-field').value,
-            UserID: userID
+        var userID =  sessionStorage.getItem('currStudent');
+        const q = query(collection(db, "forumDetail"), where("Comment", "==", document.getElementById('comment-field').value));
+        const querySnapshot = await getDocs(q);
+        var flag = true;
+        querySnapshot.forEach((query) => {
+            if(query.data() == null){
+                flag = true;
+            }else{
+                flag = false;
+            }
         });
+
+        if(flag == true){
+            const docRef = await addDoc(collection(db, "forumDetail"), {
+                ForumID: ForumID,
+                Comment: document.getElementById('comment-field').value,
+                UserID: userID
+            });
+        }else{
+            alert('Your reply forum is similar to another reply forum!');
+        }
 
         window.location.reload()
     })
