--- a/Application/kz-desktop/src/view/student/view-lecturer-students.html
+++ b/Application/kz-desktop/src/view/student/view-lecturer-students.html
@@ -18,7 +18,9 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="./view-class.html">View Class</a>
-                        <a class="nav-link" href="./view-class-schedule.html">View Class Schedule</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./view-class-schedule.html">View Class Schedule</a>
                     </li>
                 </ul>
                 <ul style="list-style: none">
@@ -33,6 +35,21 @@
             </div>
         </nav>
     </header>
+    <ul class="nav nav-tabs" style="margin-top: 50px;">
+      <li class="nav-item">
+        <a class="nav-link" href="./view-course-syllabus.html">Course Syllabus</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" href="./view-forum.html">Forum</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="./view-lecturer-students.html">Lecturer & Students</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./view-assignment.html">Assignment</a>
+        </li>
+    </ul>
+    <div id="myTabContent" class="tab-content">
     <div style="margin-top: 75px;">
         <h2> <strong class="d-flex justify-content-center" >View Lecturer and Students</strong> </h2>
         <table class="table table-hover">
@@ -68,6 +85,7 @@
               </template>
             </tbody>
           </table>
+    </div>
     </div>
   </body>
   <script type="module">
